[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Video Settings.gd" type="Script" id=2]
[ext_resource path="res://Menu/Space Meatball.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/TimeandSpace-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 4 )

[node name="Video Settings" type="Popup" groups=[
"Menus",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
color = Color( 0.164706, 0.0431373, 0.286275, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -9.99997
margin_bottom = -10.0
color = Color( 0.494118, 0.345098, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = -208.087
margin_right = 239.5
margin_bottom = 211.913
rect_min_size = Vector2( 460, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 479.0
margin_bottom = 63.0
text = "Video Settings
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 479.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 17.0
margin_right = 253.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Resolution"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 257.0
margin_right = 443.0
margin_bottom = 65.0

[node name="ResolutionOptions" type="OptionButton" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 186.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "1280x720"
items = [ "1024 x 768", null, false, 0, null, "1280x720", null, false, 1, null, "1280x800", null, false, 2, null, "1280x1024", null, false, 3, null, "1366x768", null, false, 4, null, "1440x900", null, false, 5, null, "1600x900", null, false, 6, null, "1920x1080", null, false, 7, null ]
selected = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 479.0
margin_bottom = 213.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 23.0
margin_right = 258.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "FullScreen"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 472.0
margin_bottom = 77.0

[node name="FullScreenMode" type="OptionButton" parent="VBoxContainer/HBoxContainer2/CenterContainer"]
margin_right = 210.0
margin_bottom = 77.0
rect_min_size = Vector2( 210, 77 )
custom_fonts/font = SubResource( 2 )
text = "Windowed"
clip_text = true
items = [ "Windowed", null, false, 0, null, "FullScreen", null, false, 1, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 217.0
margin_right = 479.0
margin_bottom = 321.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 100.0
margin_top = 37.0
margin_right = 231.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "VSync"
align = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer3"]
margin_left = 235.0
margin_right = 379.0
margin_bottom = 104.0

[node name="VSyncButton" type="CheckBox" parent="VBoxContainer/HBoxContainer3/CenterContainer"]
margin_right = 144.0
margin_bottom = 104.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 325.0
margin_right = 479.0
margin_bottom = 395.0

[node name="BackButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 36.0
margin_right = 443.0
margin_bottom = 70.0
text = "Save Settings"
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/CenterContainer/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/CenterContainer/FullScreenMode" to="." method="_on_FullScreenMode_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/CenterContainer/VSyncButton" to="." method="_on_VSyncButton_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/BackButton" to="." method="_on_BackButton_pressed"]
